# meta_opt

./: .gitignore  CMakeLists.txt  cmake_install.cmake  notes.txt
apps/: CMakeLists.txt  Makefile  cmake_install.cmake  json_test.cpp  test.cpp  train_test.cpp  tsp_test.cpp
data/tsplib/: a280_tour.json  ali535.json  ali535_tour.json  att48.json  att48_tour.json  att532.json  att532_tour.json  bayg29_tour.json  bays29_tour.json  berlin52_tour.json  bier127.json  bier127_tour.json  brazil58_tour.json  brd14051.json  brg180.json  brg180_tour.json  burma14_tour.json  ch130.json  ch130_tour.json  ch150.json  ch150_tour.json  d1291.json  d1291_tour.json  d15112.json  d1655.json  d18512.json  d198.json  d198_tour.json  d2103.json  d493.json  d493_tour.json  d657.json  d657_tour.json  dantzig42_tour.json  dsj1000.json  dsj1000_tour.json  eil101_tour.json  eil51.json  eil51_tour.json  eil76.json  (+133 more)
src/: CMakeLists.txt  Makefile  cmake_install.cmake  config.hpp  utils.hpp
src/generic/: instance.cpp  instance.hpp  optimizer.cpp  optimizer.hpp  solution.cpp  solution.hpp
src/specific/: train_disp.cpp  train_disp.hpp  tsp.cpp  tsp.hpp
